--- a/JSON/saaTyylit.css
+++ b/JSON/saaTyylit.css
@@ -1,4 +1,4 @@
-
+/*elementit*/
 .container {
     display: flex;
     justify-content: left; 
@@ -6,18 +6,18 @@
     margin-top: 20px;
 }
 
-
+/*lista*/
 ul {
     list-style-type: disc; 
     padding-left: 20px;
 }
-
+/*Kaupunkien ympärys*/
 .kaupunki {
     padding: 20px;
     border-radius: 8px;
     width: 250px;
 }
-
+/*otsikoiden ja tekstin tyylit*/
 h2 {
     text-align: left;
 }
@@ -30,7 +30,7 @@ p {
     text-align: left;
 
 }
-
+/*tyyli painikkeelle*/
 button {
     float: left;
     display: block;
