--- a/JSON/tyylit.css
+++ b/JSON/tyylit.css
@@ -1,10 +1,12 @@
+
+/*tausta*/
 body {
     font-family: Bahnschrift SemiCondensed, sans-serif; 
     background-color: #6cabfd; 
     margin: 0;
     padding: 20px; 
 }
-
+/*otsikko ja teksti*/
 h1 {
     color: #0c0c0c; /
 }
@@ -14,6 +16,7 @@ p {
     color: #0c0c0c; /
 }
 
+/*listat*/
 ul {
     list-style-type: none; 
     padding: 0; 
@@ -25,7 +28,7 @@ li {
     max-width: 200px; 
     
 }
-
+/*kuvat*/
 .kuva-container {
     display: flex; 
     align-items: center; 
@@ -37,7 +40,7 @@ li {
     height: auto; 
     padding: 20px; 
 }
-
+/*sisältö*/
 .content {
     display: flex; 
     justify-content: space-between; 
