--- a/JSON/tyylit.css
+++ b/JSON/tyylit.css
@@ -2,9 +2,28 @@
 /*tausta*/
 body {
     font-family: Bahnschrift SemiCondensed, sans-serif; 
-    background-color: #6cabfd; 
+    background-color: #6cabfd !important;  
     margin: 0;
     padding: 20px; 
+}
+/*navipalkki*/
+.navbar {
+    background-color: transparent; 
+    border: none; 
+    box-shadow: none;
+}
+
+.navbar-nav .nav-link {
+    color: black; 
+    font-weight: bold; 
+}
+
+.navbar-toggler {
+    border: none; 
+}
+
+.navbar-light .navbar-toggler-icon {
+    background-image: none; 
 }
 /*otsikko ja teksti*/
 h1 {
