--- a/JSON/tyylit.css
+++ b/JSON/tyylit.css
@@ -7,24 +7,23 @@ body {
     padding: 20px; 
 }
 /*navipalkki*/
-.navbar {
-    background-color: transparent; 
-    border: none; 
-    box-shadow: none;
-}
-
 .navbar-nav .nav-link {
     color: black; 
-    font-weight: bold; 
 }
 
-.navbar-toggler {
-    border: none; 
+.navbar-toggler-icon {
+    background-color: transparent; /* Hampurilaisvalikko */
 }
 
-.navbar-light .navbar-toggler-icon {
-    background-image: none; 
+.navbar-nav {
+    margin-left: auto; 
 }
+
+.navbar-brand {
+    font-size: 24px; 
+    color: black;
+}
+
 /*otsikko ja teksti*/
 h1 {
     color: #0c0c0c; /
