--- a/JSON/saaTyylit.css
+++ b/JSON/saaTyylit.css
@@ -36,3 +36,10 @@ button {
     display: block;
     margin: 20px auto;
 }
+
+body {
+    font-family: Bahnschrift SemiCondensed, sans-serif; 
+    background-color: #ffffff; 
+    margin: 0;
+    padding: 20px; 
+}
