--- a/JSON/saaTyylit.css
+++ b/JSON/saaTyylit.css
@@ -1,7 +1,7 @@
 /*elementit*/
 .container {
     display: flex;
-    justify-content: left; 
+    justify-content: flex-start; 
     gap: 20px;
     margin-top: 20px;
 }
